remove duplicate name

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -219,7 +219,7 @@
         AUTHOR = {Johan Mabille and Thorsten Beier and David Brochart and
                   Sylvain Corlay and Tom {de Geus} and Adrien Delsalle
                   and Ullrich Koethe and {GitHub user kolibri91} and
-                  Johan Mabille and Antoine Prouvost and Martin Renou and
+                  Antoine Prouvost and Martin Renou and
                   {GitHub user SoundDev} and Wolf Vollprecht and Jun Zhu},
           URL = {https://github.com/xtensor-stack/xtensor},
          YEAR = {2021}
