paper is to appear now

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -24,12 +24,11 @@
 }
 
 @unpublished{dof-transformations,
-       AUTHOR = {Matthew W. Scroggs and J{\o}rgen S. Dokken and Chris N. Richardson and Garth N. Wells},
+     AUTHOR = {Matthew W. Scroggs and J{\o}rgen S. Dokken and Chris N. Richardson and Garth N. Wells},
       TITLE = {Construction of arbitrary order finite element degree-of-freedom maps on polygonal and polyhedral cell meshes},
        YEAR = {2021},
-       NOTE = {submitted to ACM Transactions on Mathematical Software},
-       ARCHIVEPREFIX = {arXiv},
-       EPRINT = {2102.11901},
+       NOTE = {to appear in ACM Transactions on Mathematical Software},
+        DOI = {10.1145/3524456}
 }
 
 @article{ufl,
@@ -288,11 +287,12 @@
     author = {Robert Anderson and Julian Andrej and Andrew Barker and Jamie Bramwell and Jean-Sylvain Camier and Jakub Cerveny and Veselin Dobrev and Yohann Dudouit and Aaron Fisher and Tzanio Kolev and Will Pazner and Mark Stowell and Vladimir Tomov and Ido Akkerman and Johann Dahm and David Medina and Stefano Zampini},
 }
 
-@article{finat1,
+@unpublished{finat1,
     author = {Homolya, Mikl\'os and Kirby, Robert C. and Ham, David A.},
     title = {Exposing and exploiting structure: optimal code generation for high-order finite element methods},
-    url = {http://arxiv.org/abs/1711.02473v1},
     year = {2017}
+    ARCHIVEPREFIX = {arXiv},
+    EPRINT = {1711.02473},
 }
 
 @article{finat2,
