Update joss paper (#481)
* First attempt at more info about other libraries

* paper is to appear now

* Update joss/paper.md

Co-authored-by: Igor Baratta <igorbaratta@gmail.com>

* Update joss/paper.md

Co-authored-by: Igor Baratta <igorbaratta@gmail.com>

* Update joss/paper.md

* tensor products

* reqord

* tidy references

* copyediting

* Add more info on DOF transformations

Co-authored-by: Igor Baratta <igorbaratta@gmail.com>

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -24,12 +24,11 @@
 }
 
 @unpublished{dof-transformations,
-       AUTHOR = {Matthew W. Scroggs and J{\o}rgen S. Dokken and Chris N. Richardson and Garth N. Wells},
+     AUTHOR = {Matthew W. Scroggs and J{\o}rgen S. Dokken and Chris N. Richardson and Garth N. Wells},
       TITLE = {Construction of arbitrary order finite element degree-of-freedom maps on polygonal and polyhedral cell meshes},
        YEAR = {2021},
-       NOTE = {submitted to ACM Transactions on Mathematical Software},
-       ARCHIVEPREFIX = {arXiv},
-       EPRINT = {2102.11901},
+       NOTE = {to appear in ACM Transactions on Mathematical Software},
+        DOI = {10.1145/3524456}
 }
 
 @article{ufl,
@@ -223,4 +222,109 @@
                   {GitHub user SoundDev} and Wolf Vollprecht and Jun Zhu},
           URL = {https://github.com/xtensor-stack/xtensor},
          YEAR = {2021}
+}
+
+@article{hhj,
+    AUTHOR = {{A}rnold, {D}ouglas {N}. and {W}alker, {S}hawn {W}.},
+     TITLE = {{T}he {H}ellan--{H}errmann--{J}ohnson method with curved elements},
+   JOURNAL = {SIAM Journal on Numberical Analysis},
+    VOLUME = {58},
+    NUMBER = {5},
+      YEAR = {2020},
+       DOI = {10.1137/19M1288723},
+     PAGES = {{2829--2855}},
+}
+
+@article{symfem,
+       AUTHOR = {Scroggs, Matthew W.},
+        TITLE = {Symfem: a symbolic finite element definition library},
+         YEAR = {2021},
+      JOURNAL = {Journal of Open Source Software},
+        ISSUE = {6},
+       NUMBER = {64},
+       VOLUME = {6},
+        PAGES = {{3556}},
+          DOI = {10.21105/joss.03556},
+}
+
+@TECHREPORT{ngsolve,
+    author = {J. Sch\"oberl},
+    title = {C++11 implementation of finite elements in {NGS}olve},
+    institution = {Institute for Analysis and Scientific Computing, TU Wien},
+    year = {2014},
+    url = {https://www.asc.tuwien.ac.at/~schoeberl/wiki/publications/ngs-cpp11.pdf}
+}
+
+@inbook{dune,
+    title = {Local Finite Elements and the dune-localfunctions Module},
+    author = {Oliver Sander},
+    bookTitle = {DUNE --- The Distributed and Unified Numerics Environment},
+    year = {2020},
+    publisher = {Springer International Publishing},
+    pages = {{301--324}},
+    doi = {10.1007/978-3-030-59702-3_8}
+}
+
+@article{dealii,
+    author = {Bangerth, W. and Hartmann, R. and Kanschat, G.},
+    title = {Deal.II---A General-Purpose Object-Oriented Finite Element Library},
+    year = {2007},
+    volume = {33},
+    number = {4:24},
+    doi = {10.1145/1268776.1268779},
+    journal = {ACM Transactions on Mathematical Software},
+    pages = {{1--27}},
+
+}
+
+@article{mfem,
+    title = {MFEM: A modular finite element methods library},
+    journal = {Computers & Mathematics with Applications},
+    volume = {81},
+    pages = {{42--74}},
+    year = {2021},
+    doi = {10.1016/j.camwa.2020.06.009},
+    author = {Robert Anderson and Julian Andrej and Andrew Barker and Jamie Bramwell and Jean-Sylvain Camier and Jakub Cerveny and Veselin Dobrev and Yohann Dudouit and Aaron Fisher and Tzanio Kolev and Will Pazner and Mark Stowell and Vladimir Tomov and Ido Akkerman and Johann Dahm and David Medina and Stefano Zampini},
+}
+
+@unpublished{finat1,
+    author = {Homolya, Mikl\'os and Kirby, Robert C. and Ham, David A.},
+    title = {Exposing and exploiting structure: optimal code generation for high-order finite element methods},
+    year = {2017},
+    ARCHIVEPREFIX = {arXiv},
+    EPRINT = {1711.02473},
+}
+
+@article{finat2,
+    author = {Kirby, Robert C. and Mitchell, Lawrence},
+    title = {Code Generation for Generally Mapped Finite Elements},
+    year = {2019},
+    volume = {45},
+    number = {4:41},
+    doi = {10.1145/3361745},
+    journal = {ACM Transactions on Mathematical Software},
+    pages = {1--23},
+}
+
+@article{bempp-cl,
+       AUTHOR = {Betcke, Timo and Scroggs, Matthew W.},
+        TITLE = {Bempp-cl: {A} fast {P}ython based just-in-time compiling boundary element library},
+         YEAR = {2021},
+      JOURNAL = {Journal of Open Source Software},
+        ISSUE = {6},
+       NUMBER = {59},
+       VOLUME = {6},
+        PAGES = {{2879}},
+          DOI = {10.21105/joss.02879},
+}
+
+@article{bempp,
+    title = {{Solving boundary integral problems with BEM++}},
+    author = {\'{S}migaj, Wojciech and Betcke, Timo and Arridge, Simon and Phillips, Joel and Schweiger, Martin},
+    year = {{2015}},
+    journal = {{ACM Transactions on Mathematical Software}},
+    volume = {{41}},
+    number = {{2}},
+    pages = {{6:1--6:40}},
+    doi = {{10.1145/2590830}},
 }
