--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -287,23 +287,12 @@
     author = {Robert Anderson and Julian Andrej and Andrew Barker and Jamie Bramwell and Jean-Sylvain Camier and Jakub Cerveny and Veselin Dobrev and Yohann Dudouit and Aaron Fisher and Tzanio Kolev and Will Pazner and Mark Stowell and Vladimir Tomov and Ido Akkerman and Johann Dahm and David Medina and Stefano Zampini},
 }
 
-@unpublished{finat1,
+@unpublished{finat,
     author = {Homolya, Mikl\'os and Kirby, Robert C. and Ham, David A.},
     title = {Exposing and exploiting structure: optimal code generation for high-order finite element methods},
     year = {2017},
     ARCHIVEPREFIX = {arXiv},
     EPRINT = {1711.02473},
-}
-
-@article{finat2,
-    author = {Kirby, Robert C. and Mitchell, Lawrence},
-    title = {Code Generation for Generally Mapped Finite Elements},
-    year = {2019},
-    volume = {45},
-    number = {4:41},
-    doi = {10.1145/3361745},
-    journal = {ACM Transactions on Mathematical Software},
-    pages = {1--23},
 }
 
 @article{bempp-cl,
