--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -308,12 +308,12 @@
 }
 
 @article{bempp,
-    title = {{Solving boundary integral problems with BEM++}},
+    title = {Solving boundary integral problems with {BEM}++},
     author = {\'{S}migaj, Wojciech and Betcke, Timo and Arridge, Simon and Phillips, Joel and Schweiger, Martin},
-    year = {{2015}},
-    journal = {{ACM Transactions on Mathematical Software}},
-    volume = {{41}},
-    number = {{2}},
+    year = {2015},
+    journal = {ACM Transactions on Mathematical Software},
+    volume = {41},
+    number = {2},
     pages = {{6:1--6:40}},
-    doi = {{10.1145/2590830}},
+    doi = {10.1145/2590830},
 }
